--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/securityrestjwt
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=rfgbnfy
+
+jwt.header=Authorization
+jwt.secret=ilay
+jwt.expiration=604880
