--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 
+server.port=8090
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/securityrestjwt
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
